# experience-engine

./: .gitignore  README.md  experience_feedback.py  experience_hooks.py  experience_recall.py  pyproject.toml
experience/: __init__.py  assessor.py  engine.py  error_repo.py  feedback_store.py  gbrain_client.py  method_repo.py  models.py  recall.py  utils.py
tests/: test_experience_engine.py
